--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "Portfolio"
     url: /portfolio/
         
-  - title: "Thoughts"
+  - title: "Blog"
     url: /year-archive/
   
     
