--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,9 @@ main:
     
   - title: "Publications"
     url: /publications/
+    
+  - title: "Posters"
+    url: /posters/ 
 
 #  - title: "Talks"
 #    url: /talks/      
