--- a/_config.yml
+++ b/_config.yml
@@ -93,12 +93,12 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "chirathyh"
+  facebook         : 
   foursquare       :
   github           : "chirathyh"
   google_plus      :
   keybase          :
-  instagram        : "chirathyh"
+  instagram        : 
   lastfm           :
   linkedin         : "chirathyh"
   orcid            :  "https://orcid.org/0000-0002-7702-0718"
