--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Chirath Hettiarachchi"
   avatar           : "profile.png"
-  bio              : "PhD Student | Blogger"
+  bio              : "PhD Student"
   location         :  "Australia"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=gvLLPs8AAAAJ&hl=en"
