--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
 #   location         :  "Australia"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=gvLLPs8AAAAJ&hl=en"
-  email            : "chirathyh@gmail.com"
+  email            : "chirathyh@hotmail.com"
 #   researchgate     : "https://www.researchgate.net/profile/Chirath_Hettiarachchi"
   uri              :
   bitbucket        :
